# Nx-TV-rs

./: Cargo.toml  Xargo.toml  makew
.cargo/: config
src/: lib.rs  player.rs
src/decoder_shim/: mod.rs
src/rawbindings/: decoder.rs  ffmpeg_ffi.rs  mod.rs
