[package]
name = "libnx-rs-template"
version = "0.0.5"
authors = ["scheinkman.ilan@gmail.com"]

[[bin]]
name = "libnxbin"
path = "src/lib.rs"

[dependencies]
image="0.18.0"
libc= "0.2"

[dependencies.sdl2]
version = "0.31"
features = ["unsafe_textures"]

[replace]
"num_cpus:1.8.0" = { git = 'https://github.com/kloumpt/num_cpus/', branch = 'nintendo-3ds-horizon' }
